--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.dom.js"></script>
+    <script src="sketch.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root">
       <h1>Hello world!</h1>
     </div>
+    
     <script src="index.js" type="module"></script>
   </body>
 </html>
